--- a/www/assets/css/style.css
+++ b/www/assets/css/style.css
@@ -161,9 +161,10 @@ h1 img {
 }
 
 #map-canvas {
-    height: 0;
-    width: 70%;
-    padding: 0;
+    position:absolute;
+    width:100%;
+    height:100%;
+
 
 
 }
