--- a/www/assets/css/style.css
+++ b/www/assets/css/style.css
@@ -315,3 +315,8 @@ div#bilanSubmit.ui-page.ui-page-theme-a.ui-page-active div#contentBilanS div.ui-
     height: 5em;
     color: #7DD1EB;
 }
+
+.radio-bilan{
+    padding-left: 2px !important;
+    padding-right: 2px !important;
+}
